# cpp_annotations

./: CMakeLists.txt  errata.txt
chapter10/: CMakeLists.txt  collapse.cpp  constclass.cpp  constructdelegateexception.cpp  constructexception.cpp  exception_ex1.cpp  exception_ex2.cpp  exception_ex3.cpp  exception_ex4.cpp  exception_ex5.cpp  exception_ex6.cpp  exception_ex7.cpp  functiontryblock.cpp  ioexception.cpp
chapter11/: CMakeLists.txt  ambiguity.cpp  binaryfriend.cpp  binaryrvalue.cpp  binaryrvalue2.cpp  binaryrvalue3.cpp  byte.cc  explicit.cpp  important_ref_info.txt  intarray.cc  intarray.h  ipaddr.cpp  lambdaconstexpr.cpp  lambdatest.cpp  mainintarray.cc  manipmatrix.cpp  manipulator.cpp  multiindex.cc  newoverload.cpp  newoverload2.cpp  newoverload3.cpp  prefixpostfix.cpp  prefixpostfix2.cpp  refbinding2.cc  stringconversionerror.cc
chapter12/: CMakeLists.txt  allocator.cpp  complexnum.cpp  findinmap.cpp  insertinmap.cpp  listsplice.cpp  mapbound.cpp  maptest.cpp  mergelist.cpp  multimapbound.cpp  multisetbound.cpp  removelist.cpp  simplemap.cpp  swapvector.cpp  uniquelist.cpp  unordered_map.cpp  unordered_map2.cpp
chapter13/: CMakeLists.txt  aggregateinit.cpp  derived.cpp  derivedconstruct.cpp  destructbase.cpp  inheretconstruct.cpp  nstrings.cc  redefine.cpp
chapter14/: CMakeLists.txt  fatal.h  finalkeyword.cc  purevirtualimp.cc  trucktrailer.cc  typeidtest.cc  virtcons.cc  virtcons2.cc  virtcons3.cc  virtconsorg.cc  virtualinherit2.cc  vtable.cc
chapter16/: CMakeLists.txt  pointersize.cc
chapter17/: CMakeLists.txt  accessouter.cpp  emptyenum.cpp  surround.cpp  surround2.cpp  surround3.cpp  virtconstruct.cpp
chapter18/: CMakeLists.txt  Derived.cc  backinserter.cc  classtypeplus.cc  deleter.cc  distance.cc  insertcpp.cc  moveiter.cc  negate.cc  optional.cc  optionalemplace.cc  plusaccumulate.cc  sharedderivedtest.cc  sharedinsert.cc  tie.cc  uniqueother.cc
chapter19/: CMakeLists.txt  accumulate.cc  adjacentdifference.cc  adjacentfind.cc  allof.cc  beginend.cc  binarysearch.cc  copy.cc  copybackward.cc  count.cc  equal.cc  equalrange.cc  exchange.cc  fill.cc  find.cc  findend.cc  findfirstof.cc  foreach.cc  generate.cc  includes.cc  innerproduct.cc  inplacemerge.cc  iota.cc  ispartitioned.cc  ispermutation.cc  issorted.cc  issorteduntil.cc  iterswap.cc  lexicographicalcompare.cc  lowerbound.cc  max.cc  maxelement.cc  merge.cc  minmax.cc  mismatch.cc  move.cc  nextpermutation.cc  nthelement.cc  partialsort.cc  partition.cc  (+21 more)
chapter20/: CMakeLists.txt  async1.cc  detached.cc  events.cc  insertguard.cc  locals.cc  memberthreads.cc  packagedtask2.cc  promise1.cc  scopedlock.cc  sharedfuture.cc  staticlocal.cc  stopcallback.cc  stoptoken.cc  threadargs.cc  threadargs_wva.cc  threadlocal.cc
chapter20/cmdfork/: cmdfork1.cc  icmconf
chapter20/multicompile/: CMakeLists.txt  compile.cc  data.cc  files.in  files.sh  icmconf  jobs.cc  main.cc  main.ih  newresult.cc  newtask.cc  nextcommand.cc  pushresultq.cc  results.cc  worker.cc  workforce.cc
chapter20/multisort/: CMakeLists.txt  icmconf  main.cc  main.ih  partition.cc
chapter20/osyncmulticompile/: compile.cc  data.cc  files.in  icmconf  jobs.cc  main.cc  main.ih  nextcommand.cc  results.cc  worker.cc  workforce.cc
chapter20/osyncstream/: CMakeLists.txt  main.cc
chapter20/semaphore/: CMakeLists.txt  icmconf  size.cc
chapter21/: CMakeLists.txt  declval.cc  forwardtest.cc  latereturntype.cc  local_anonymtype.cc  refwrap.cc  template1.h  templateconstexpr.cc  templatevar.cc
chapter22/: CMakeLists.txt  bindings.cc  boundfriends.cc  cirque.h  cirquepartial.h  cirquevector.h  countnontype.cc  decay.cc  deducetype.cc  derive1.cc  foldexpression.cc  forwardtest.cc  friendtest1.cc  friendtest2.cc  friendtest3.cc  friendtest4.cc  friendtest5.cc  genlambda.cc  initvarlambda.cc  instantiations.cc  matrix.cc  matrix.h  multibaseclass.cc  resultof.cc  resultof2.cc  testspec.cc  tupletest.cc  variadic.cc  variadicsizeof.cc  vector2.cc
chapter22/bounditer2/: main.cc
chapter22/bounditer3/: main.cc
chapter23/: CMakeLists.txt  addableconcept.cc  aliastemplate.cc  allintegralconcept.cc  alloctest.cc  basename1.cc  basename2.cc  basictraits.cc  basictraits.h  conceptstringret.cc  constructibleconcept.cc  convertconcept.cc  enableif.cc  erasetypelist.cc  exprtempl.cc  exprtempl10.cc  exprtempl11.cc  exprtempl2.cc  exprtempl3.cc  exprtempl4.cc  exprtempl5.cc  exprtempl6.cc  exprtempl7.cc  exprtempl8.cc  exprtempl9.cc  factorial.cc  inttype.cc  invokableconcept.cc  listsearch.cc  miles.cc  multibase.cc  newalloc.h  partialconcept.cc  predefconcept.cc  predicateconcept.cc  prefixappendtypelist.cc  relationconcept.cc  returnconcept.cc  returnconcept2.cc  selectfromtypelist.cc  (+17 more)
chapter24/: CMakeLists.txt  fib.cc  fibcoro.cc
chapter3/: CMakeLists.txt  bindings.cc  byte.cc  movecons1.cc  movecons2.cc  movecons3.cc  movecons4.cc  movecons5.cc  movetest.cc  rvalueref.cc
chapter4/: CMakeLists.txt  clock.cpp  duration.cpp  fileclock.cpp  iterator.cpp  koenig.cpp  koenig2.cpp  ratio.cpp  scandir.cpp
chapter5/: CMakeLists.txt  stringliteral.cpp  stringview.cpp
chapter6/: CMakeLists.txt  align.cpp  checkstatus.cpp  dbsample.cpp  dbsample2.cpp  inputstring.cpp  isopen.cpp  localtime.cpp  movestream.cpp  movetest.cpp  nonewline.txt  readdouble.cpp  readwrite.cpp  readwrite2.cpp  redirect.cpp  reusestringstream.cpp  seekinput.cpp  skipline.cpp  statusflags.cpp  strstream.cpp  tietest.cpp
chapter7/: CMakeLists.txt  Data.h  ambiguity.cpp  ambiguity2.cpp  anonymous.cpp  constobj.cpp  constructorder.cpp  datamemberinit.cpp  defaultconstr.cpp  delegateconstruct.cpp  demo.cpp  parenthesis.cpp  person.cpp  person.h  personmain.cpp  uniforminit.cpp
chapter8/: CMakeLists.txt  constexpr.cpp  constexpr2.cpp  staticmemberfunction.cpp
chapter9/: CMakeLists.txt  aggregate.cpp  assignment.cpp  copyconstruct.cpp  copyconstruct2.cpp  copyconstructsuppress.cpp  destructor.cpp  fastswap.cpp  leaktest.cpp  movecompos.cpp  newhandler.cpp  placementnew.cpp  rawbytes.cpp  reviseassign.cpp  rvaluetest.cpp  unrestrictedunion.cpp  wrapper.cpp
(+157 files in other folders)
